--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 class="logo me-auto"><a href="index.html">Mi Primera Pagina Web<li></li></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- -->
-      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="assets/img/cta-bg.jpg" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
